--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+  
   <title>SmartVentes</title>
 
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
- </head>
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
  <body class="fix-header fix-sidebar card-no-border">
   <app-root></app-root>
 
